--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -78,6 +78,12 @@
   label {
     @apply text-[14px] font-semibold;
   }
+
+  input[type="number"]::-webkit-inner-spin-button,
+  input[type="number"]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
 }
 
 @layer components {
